Weitere 10 Punkte in der Tasche

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1754,7 +1754,7 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# === 3. Weitere (optionale) Diagramme: ω(t), α(t), Phasendiagramm ===\n",
+    "# === 3. Weitere (optionale) Diagramme: ω(t), α(t), Phasendiagramm, Mechanische/Physikalische Energien ===\n",
     "fig2, axs2 = plt.subplots(2, 2, figsize=(12, 10))  # 2x2 Grid für 4 Diagramme\n",
     "\n",
     "# Winkelgeschwindigkeit ω(t)\n",
