Markdown und Code zum Vergleich RK23 und RK45 überarbeitet

--- a/EA2/EA2.ipynb
+++ b/EA2/EA2.ipynb
@@ -1826,34 +1826,38 @@
    "source": [
     "<span style=\"color: brown;\" title=\"Ahmed\">\n",
     "\n",
-    "## Unterschiede zwischen der 'RK45' Methode under der 'RK23' Methode\n",
+    "## Vergleich der Integrationsmethoden `RK45` und `RK23`\n",
     "\n",
-    "Dieses Python-Skript simuliert das Verhalten eines gedämpften Pendels und vergleicht die Ergebnisse zweier numerischer Integrationsmethoden, um die Bewegung des Pendels über die Zeit zu berechnen und darzustellen. Das Pendel wird durch eine Differentialgleichung modelliert, die sowohl die Rückstellkraft als auch die Dämpfung berücksichtigt.\n",
+    "Zur numerischen Lösung von Differentialgleichungen stehen in `scipy.integrate.solve_ivp` verschiedene adaptive Runge-Kutta-Verfahren zur Verfügung. Zwei davon sind `RK45` und `RK23`, die sich in Genauigkeit, Aufwand und Interpolationsverfahren unterscheiden:\n",
     "\n",
-    "Im Code werden die folgenden Schritte durchgeführt:\n",
+    "- **`RK45`**: Ein explizites Runge-Kutta-Verfahren der Ordnung 5(4) (Dormand-Prince).  \n",
+    "  - Der Fehler wird mit der eingebetteten Methode 4. Ordnung abgeschätzt, während die Schritte mit der genaueren 5. Ordnung durchgeführt werden (lokale Extrapolation).  \n",
+    "  - Für die dichte Ausgabe wird ein **quartisches Interpolationspolynom** verwendet.  \n",
+    "  - Geeignet für viele nicht-steife Probleme und auch im komplexen Zahlenbereich anwendbar.  \n",
     "\n",
-    "1. **Pendelsystem-Parameter**: Die physikalischen Parameter des Pendels, wie Pendellänge, Masse, Dämpfung und Erdbeschleunigung, werden festgelegt. Der Anfangswinkel und die Anfangsgeschwindigkeit werden ebenfalls definiert.\n",
+    "- **`RK23`**: Ein explizites Runge-Kutta-Verfahren der Ordnung 3(2) (Bogacki-Shampine).  \n",
+    "  - Der Fehler wird mit einer eingebetteten Methode 2. Ordnung abgeschätzt, Schritte erfolgen mit der genaueren 3. Ordnung.  \n",
+    "  - Die dichte Ausgabe basiert auf einem **kubischen Hermite-Polynom**.  \n",
+    "  - Ebenfalls für komplexe Werte geeignet, aber typischerweise weniger präzise als `RK45`.\n",
     "\n",
-    "2. **Differentialgleichung des gedämpften Pendels**: Die Bewegung des Pendels wird durch eine gekoppelte Differentialgleichung erster Ordnung beschrieben, die sowohl den Winkel des Pendels (θ) als auch die Winkelgeschwindigkeit (ω) umfasst. Die Rückstellkraft (durch die Schwere des Pendels) und die Dämpfung (durch die Luftreibung) wirken zusammen auf das System.\n",
+    "### Ziele der Aufgabe\n",
     "\n",
-    "3. **Numerische Lösung**: Die Differentialgleichung wird numerisch mit zwei verschiedenen Runge-Kutta-Verfahren (RK45 und RK23) gelöst:\n",
-    "   - **RK45**: Eine höhere Ordnung (5. Ordnung) Methode, die die Dormand-Prince-Methode verwendet.\n",
-    "   - **RK23**: Eine geringere Ordnung (3. Ordnung) Methode, die die Bogacki-Shampine-Methode verwendet.\n",
-    "   \n",
-    "4. **Vergleich der Lösungen**: Die Berechnungen der beiden Methoden werden miteinander verglichen, indem der absolute Unterschied in den berechneten Positionen des Pendels (sowohl in der x- als auch in der y-Richtung) über die Zeit dargestellt wird.\n",
+    "Es soll der Unterschied beider Methoden bei der Simulation eines gedämpften Pendels dargestellt werden. Die folgenden vier Liniendiagramme helfen dabei, die Abweichungen sichtbar zu machen:\n",
     "\n",
-    "5. **Visualisierung der Ergebnisse**: Die Ergebnisse werden in vier verschiedenen Diagrammen angezeigt:\n",
-    "   - Die Position des Pendels in der x-Richtung und y-Richtung über die Zeit.\n",
-    "   - Der absolute Unterschied in den x- und y-Positionen zwischen den beiden Methoden (RK45 und RK23).\n",
+    "1. **x-Position über der Zeit** für `RK45` und `RK23`  \n",
+    "2. **y-Position über der Zeit** für beide Methoden  \n",
+    "3. **Absoluter Unterschied in x(t)** zwischen `RK45` und `RK23`  \n",
+    "4. **Absoluter Unterschied in y(t)** zwischen `RK45` und `RK23`  \n",
     "\n",
-    "Das Ziel des Skripts ist es, die Auswirkungen unterschiedlicher Integrationsmethoden auf die Genauigkeit der Simulation und den Vergleich der Position des Pendels im Verlauf der Zeit zu analysieren. Es zeigt, wie die Wahl der numerischen Methode die Präzision in der Berechnung der Pendelbewegung beeinflussen kann.\n",
+    "Diese Darstellung macht deutlich, wie sich die Wahl der Integrationsmethode auf die Genauigkeit der Simulation auswirkt.\n",
     "\n",
-    "</span>\n"
+    "\n",
+    "<span>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -1900,103 +1904,63 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.integrate import solve_ivp\n",
+    "# Simulationen durchführen\n",
+    "sol_45 = simulate_pendulum(method='RK45')\n",
+    "sol_23 = simulate_pendulum(method='RK23')\n",
     "\n",
-    "# --- Pendelparameter ---\n",
-    "L = 1                   # Pendellänge in Metern\n",
-    "m = 1                   # Masse des Pendels in kg\n",
-    "b = 0.5                 # Dämpfung in Ns·m/rad\n",
-    "g = 9.81                # Erdbeschleunigung in m/s²\n",
-    "steps = 20000           # Anzahl der Zeitschritte für die Simulation\n",
-    "t_max = 15              # Maximale Simulationszeit in Sekunden\n",
-    "theta0 = np.pi / 3      # Anfangswinkel (60°)\n",
-    "omega0 = 0              # Anfangsgeschwindigkeit\n",
+    "# Gemeinsame Zeitbasis (Annahme: gleiche Zeitpunkte)\n",
+    "t = sol_45.t\n",
+    "theta_45, omega_45 = sol_45.y\n",
+    "theta_23, omega_23 = sol_23.y\n",
     "\n",
-    "# --- Differentialgleichung des gedämpften Pendels ---\n",
-    "def pendel(t, y):\n",
-    "    \"\"\"\n",
-    "    Diese Funktion beschreibt das Pendelmodell als System von zwei \n",
-    "    gekoppelten Differentialgleichungen erster Ordnung:\n",
-    "    \n",
-    "    y[0] = theta (Winkel), y[1] = omega (Winkelgeschwindigkeit)\n",
-    "    \n",
-    "    Rückgabe:\n",
-    "        [d(theta)/dt, d(omega)/dt]\n",
-    "    \"\"\"\n",
+    "# Positionen berechnen\n",
+    "x_45 = L * np.sin(theta_45)\n",
+    "y_45 = -L * np.cos(theta_45)\n",
     "\n",
-    "    theta, omega = y\n",
-    "    dtheta_dt = omega # Ableitung von theta ist omega\n",
-    "    domega_dt = -(b / m) * omega - (g / L) * theta # Linearisierte Gleichung: Dämpfung + Rückstellkraft\n",
-    "    return [dtheta_dt, domega_dt]\n",
+    "x_23 = L * np.sin(theta_23)\n",
+    "y_23 = -L * np.cos(theta_23)\n",
     "\n",
-    "# --- Zeitschritte erzeugen ---\n",
-    "t_eval = np.linspace(0, t_max, steps)     # Zeitpunkte, zu denen die Lösung ausgewertet wird\n",
-    "t_span = (0, t_max)                       # Start- und Endzeit der Simulation\n",
-    "y0 = [theta0, omega0]                     # Anfangszustand (Winkel und Winkelgeschwindigkeit)\n",
+    "# Absolute Unterschiede\n",
+    "dx = np.abs(x_45 - x_23)\n",
+    "dy = np.abs(y_45 - y_23)\n",
     "\n",
-    "# --- Lösung der Differentialgleichung mit der RK45-Methode ---\n",
-    "sol_rk45 = solve_ivp(pendel, t_span, y0, method='RK45', t_eval=t_eval)  # Numerische Lösung mit Dormand-Prince-Methode (5. Ordnung)\n",
-    "theta_rk45 = sol_rk45.y[0]                 # Extrahiere die Winkelwerte (theta)\n",
-    "x_rk45 = L * np.sin(theta_rk45)            # Umrechnung von theta in x-Position (horizontale Projektion)\n",
-    "y_rk45 = -L * np.cos(theta_rk45)           # Umrechnung von theta in y-Position (vertikale Projektion)\n",
+    "# === 4 Diagramme ===\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(14, 8))\n",
     "\n",
-    "# --- Lösung mit RK23-Methode ---\n",
-    "sol_rk23 = solve_ivp(pendel, t_span, y0, method='RK23', t_eval=t_eval)  # Numerische Lösung mit Bogacki-Shampine-Methode (3. Ordnung)\n",
-    "theta_rk23 = sol_rk23.y[0]               # Extrahiere die Winkelwerte (theta)\n",
-    "x_rk23 = L * np.sin(theta_rk23)          # Umrechnung in x-Position\n",
-    "y_rk23 = -L * np.cos(theta_rk23)         # Umrechnung in y-Position\n",
+    "# x(t) Vergleich\n",
+    "axs[0, 0].plot(t, x_45, label='RK45', color='tab:blue')\n",
+    "axs[0, 0].plot(t, x_23, label='RK23', color='tab:orange', linestyle='--')\n",
+    "axs[0, 0].set_title('x(t): RK45 vs. RK23')\n",
+    "axs[0, 0].set_xlabel('Zeit [s]')\n",
+    "axs[0, 0].set_ylabel('x [m]')\n",
+    "axs[0, 0].legend()\n",
+    "axs[0, 0].grid(True)\n",
     "\n",
-    "# --- Berechnung des absoluten Unterschieds zwischen beiden Methoden ---\n",
-    "x_diff = np.abs(x_rk45 - x_rk23)         # Absoluter Unterschied in der x-Position zwischen RK45 und RK23\n",
-    "y_diff = np.abs(y_rk45 - y_rk23)         # Absoluter Unterschied in der y-Position zwischen RK45 und RK23\n",
+    "# y(t) Vergleich\n",
+    "axs[0, 1].plot(t, y_45, label='RK45', color='tab:green')\n",
+    "axs[0, 1].plot(t, y_23, label='RK23', color='tab:red', linestyle='--')\n",
+    "axs[0, 1].set_title('y(t): RK45 vs. RK23')\n",
+    "axs[0, 1].set_xlabel('Zeit [s]')\n",
+    "axs[0, 1].set_ylabel('y [m]')\n",
+    "axs[0, 1].legend()\n",
+    "axs[0, 1].grid(True)\n",
     "\n",
-    "# === Diagramm 1: x-Position über die Zeit ===\n",
-    "plt.figure(figsize=(14, 6))                                      # Erzeugt eine neue Zeichenfläche mit Breite 14 und Höhe 6 Zoll\n",
-    "plt.plot(t_eval, x_rk45, label='x (RK45)', linewidth=1, color='yellow')     # Zeichnet die x-Position mit RK45 (rote Linie)\n",
-    "plt.plot(t_eval, x_rk23, label='x (RK23)', linestyle='dotted', linewidth=1, color='black')  # Zeichnet die x-Position mit RK23 (gestrichelte Linie)\n",
-    "plt.title('x-Position des Pendels über die Zeit')                # Titel des Diagramms\n",
-    "plt.xlabel('Zeit [s]')                                           # Beschriftung der x-Achse (Zeit in Sekunden)\n",
-    "plt.ylabel('x-Position [m]')                                     # Beschriftung der y-Achse (x-Position in Metern)\n",
-    "plt.legend()                                                     # Zeigt die Legende mit den Linienbeschriftungen\n",
-    "plt.grid(True)                                                   # Aktiviert das Hintergrundgitter für bessere Lesbarkeit\n",
-    "plt.tight_layout()                                               # Optimiert automatisch das Layout, damit nichts überlappt\n",
-    "plt.show()                                                       # Zeigt das fertige Diagramm an\n",
+    "# Δx(t)\n",
+    "axs[1, 0].plot(t, dx, color='tab:purple')\n",
+    "axs[1, 0].set_title('Absoluter Unterschied in x(t)')\n",
+    "axs[1, 0].set_xlabel('Zeit [s]')\n",
+    "axs[1, 0].set_ylabel('|Δx| [m]')\n",
+    "axs[1, 0].grid(True)\n",
     "\n",
-    "# === Diagramm 2: y-Position über die Zeit ===\n",
-    "plt.figure(figsize=(14, 6))                                      # Neue Zeichenfläche mit gleicher Größe\n",
-    "plt.plot(t_eval, y_rk45, label='y (RK45)', linewidth=1, color='yellow')     # y-Position mit RK45 (rote Linie)\n",
-    "plt.plot(t_eval, y_rk23, label='y (RK23)', linestyle='dotted', linewidth=1, color='black')  # y-Position mit RK23 (gestrichelte Linie)\n",
-    "plt.title('y-Position des Pendels über die Zeit')                # Titel des Diagramms\n",
-    "plt.xlabel('Zeit [s]')                                           # x-Achse: Zeit\n",
-    "plt.ylabel('y-Position [m]')                                     # y-Achse: y-Position in Metern\n",
-    "plt.legend()                                                     # Zeigt die Beschriftungen der Linien\n",
-    "plt.grid(True)                                                   # Gitterlinien für bessere Ablesbarkeit\n",
-    "plt.tight_layout()                                               # Platzierung optimieren\n",
-    "plt.show()                                                       # Diagramm anzeigen\n",
+    "# Δy(t)\n",
+    "axs[1, 1].plot(t, dy, color='tab:brown')\n",
+    "axs[1, 1].set_title('Absoluter Unterschied in y(t)')\n",
+    "axs[1, 1].set_xlabel('Zeit [s]')\n",
+    "axs[1, 1].set_ylabel('|Δy| [m]')\n",
+    "axs[1, 1].grid(True)\n",
     "\n",
-    "# === Diagramm 3: Absoluter Unterschied in x ===\n",
-    "plt.figure(figsize=(14, 6))                                      # Neue Zeichenfläche\n",
-    "plt.plot(t_eval, x_diff, label='|x_RK45 - x_RK23|', color='purple')     # Plotte den absoluten Unterschied der x-Werte in Lila\n",
-    "plt.title('Absoluter Unterschied in der x-Position')             # Titel für das Diagramm\n",
-    "plt.xlabel('Zeit [s]')                                           # x-Achse zeigt Zeit\n",
-    "plt.ylabel('Differenz [m]')                                      # y-Achse zeigt die Differenz in Metern\n",
-    "plt.legend()                                                     # Legende für die Kurve\n",
-    "plt.grid(True)                                                   # Gitter aktivieren\n",
-    "plt.tight_layout()                                               # Layout anpassen\n",
-    "plt.show()                                                       # Diagramm anzeigen\n",
-    "\n",
-    "# === Diagramm 4: Absoluter Unterschied in y ===\n",
-    "plt.figure(figsize=(14, 6))                                      # Neue Zeichenfläche\n",
-    "plt.plot(t_eval, y_diff, label='|y_RK45 - y_RK23|', color='darkorange')  # Absoluter Unterschied der y-Werte in Orange\n",
-    "plt.title('Absoluter Unterschied in der y-Position')             # Titel für das Diagramm\n",
-    "plt.xlabel('Zeit [s]')                                           # x-Achse: Zeit\n",
-    "plt.ylabel('Differenz [m]')                                      # y-Achse: Differenz in Metern\n",
-    "plt.legend()                                                     # Zeigt die Legende\n",
-    "plt.grid(True)                                                   # Aktiviert das Gitter\n",
-    "plt.tight_layout()                                               # Optimiert das Layout\n",
-    "plt.show()                                                       # Zeigt das Diagramm an\n"
+    "plt.tight_layout()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -2368,7 +2332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
