--- a/EA1/Abgabedateien/EA1.ipynb
+++ b/EA1/Abgabedateien/EA1.ipynb
@@ -998,7 +998,7 @@
     "\n",
     "Die Laufzeitenanalyse zeigt, dass lu_factor schneller ist als lu.\n",
     "Die Verwendung von overwrite_a=True führt zu leicht besseren (niedrigeren) Resultaten.    \n",
-    "Die Erhöhung der repetitions kann die Erbebnisse konstanter machen.\n",
+    "Die Erhöhung der repetitions kann die Ergebnisse konstanter machen.\n",
     "Je nach System können die Laufzeiten variieren.\n",
     "\n",
     "</span>"
