Farbe einheitlich mit blau gemacht

--- a/EA1/Abgabedateien/EA1.ipynb
+++ b/EA1/Abgabedateien/EA1.ipynb
@@ -86,7 +86,7 @@
    "id": "86ab2150",
    "metadata": {},
    "source": [
-    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "<span style=\"color: blue;\" title=\"Ahmed\">\n",
     "    \n",
     "## Addition von Zahlen im Array: Unterschiedliche Berechnungsmethoden\n",
     "\n",
@@ -148,7 +148,7 @@
    "id": "d595469a",
    "metadata": {},
    "source": [
-    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "<span style=\"color: blue;\" title=\"Ahmed\">\n",
     "    \n",
     "\n",
     "## Numerische Genauigkeit von verschiedenen Additionsverfahren\n",
@@ -364,7 +364,7 @@
    "id": "fd9ede3d",
    "metadata": {},
    "source": [
-    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "<span style=\"color: blue;\" title=\"Ahmed\">\n",
     "\n",
     "## Kaskadensummation\n",
     "\n",
@@ -426,7 +426,7 @@
    "id": "4ec6a397",
    "metadata": {},
    "source": [
-    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "<span style=\"color: blue;\" title=\"Ahmed\">\n",
     "\n",
     "<h2>Berechnung der Funktion f(x) = (exp(x) - 1) / x </h2>\n",
     "\n",
@@ -556,7 +556,7 @@
    "id": "746bd18f",
    "metadata": {},
    "source": [
-    "<span style=\"color: brown;\" title=\"Ahmed\">\n",
+    "<span style=\"color: blue;\" title=\"Ahmed\">\n",
     "    \n",
     "<h2> Erklärung des Verhaltens der Funktion bei kleinen x-Werten </h2>\n",
     "\n",
