Kommentierung der import-Statements

--- a/EA1/Abgabedateien/EA1.ipynb
+++ b/EA1/Abgabedateien/EA1.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "79a0426d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy        as     np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scipy.linalg as     linalg\n",
-    "from   scipy.linalg import lu_factor, lu\n",
-    "from   timeit       import repeat\n",
-    "import memray \n",
-    "import os"
+    "import numpy as np                        # Importiert NumPy für numerische Berechnungen und kürzt es als 'np' ab\n",
+    "import matplotlib.pyplot as plt           # Importiert Matplotlib zur Erstellung von Diagrammen mit Alias 'plt'\n",
+    "import scipy.linalg as linalg             # Importiert lineare Algebra-Funktionen aus SciPy unter dem Alias 'linalg'\n",
+    "from scipy.linalg import lu_factor, lu    # Importiert direkt die LU-Zerlegung und den LU-Faktorisierer\n",
+    "from timeit import repeat                 # Importiert 'repeat', um Ausführungszeiten mehrfach zu messen\n",
+    "import memray                             # Importiert Memray zur Analyse des Speicherverbrauchs\n",
+    "import os                                 # Importiert das OS-Modul zur Interaktion mit dem Betriebssystem"
    ]
   },
   {
